--- a/.env
+++ b/.env
@@ -14,6 +14,8 @@ DB_PORT=3306
 DB_DATABASE=IntegralFlex_db
 DB_USERNAME=root
 DB_PASSWORD=
+DB_LOG=true
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
