--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "setasign/fpdi": "^2.5",
-        "spatie/pdf-to-text": "^1.52",
+        "smalot/pdfparser": "^2.7",
+        "spatie/pdf-to-text": "^1.52.0",
         "tecnickcom/tcpdf": "^6.6"
     },
     "require-dev": {
