notificaciones sobre bajo stock, añadido de boton notificacion y arreglo de codigo en ordendecompra y enlazado para afectar la tabla producto-cantidad_stock

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "setasign/fpdi": "^2.5",
+        "smalot/pdfparser": "^2.7",
         "spatie/pdf-to-text": "^1.52",
         "tecnickcom/tcpdf": "^6.6"
     },
