--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
+        "brian2694/laravel-toastr": "^5.58",
         "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -15,7 +16,6 @@
         "setasign/fpdi": "^2.5",
         "smalot/pdfparser": "^2.7",
         "spatie/pdf-to-text": "^1.52",
-        "spatie/pdf-to-text": "^1.52.0",
         "tecnickcom/tcpdf": "^6.6"
     },
     "require-dev": {
